--- a/materiales/templates/materiales/formularios_altas/alta_mapa.html
+++ b/materiales/templates/materiales/formularios_altas/alta_mapa.html
@@ -2,18 +2,18 @@
 
 <div data-block="content" data-form="mapa">
     <div class="row mb-3">
-        <div class="col-md-4">
+        <div class="col-md-3">
             <label for="sede-mapa" style="font-size: 14px;">Sede: <span style="color: red;">*</span></label>
-            <select class="form-select select-sede" id="sede-mapa" name="sede_mapa" required>
+            <select class="form-control form-control-sm" id="sede-mapa" name="sede_mapa" required>
                 <option value="">Seleccione una sede</option>
                 <option value="sede1">La Plata</option>
                 <option value="sede2">Abasto</option>
             </select>
         </div>
 
-        <div class="col-md-4">
+        <div class="col-md-3">
             <label for="input-nuevo-tipo-mapa" style="font-size: 14px;">Tipo de Mapa: <span style="color: red;">*</span></label>
-            <select class="form-select select-sede" id="input-nuevo-tipo-mapa" name="input-nuevo-tipo-mapa" required>
+            <select class="form-control form-control-sm" id="input-nuevo-tipo-mapa" name="input-nuevo-tipo-mapa" required>
                 <option value="">Seleccione un tipo</option>
                 <option value="FISICO">FISICO</option>
                 <option value="FISICO-POLITICO">FISICO-POLITICO</option>
@@ -22,7 +22,7 @@
             </select>
         </div>
         
-        <div class="col-md-4">
+        <div class="col-md-3">
             <label for="input-nueva-cant-mapa" style="font-size: 14px;">Cantidad <span class="text-danger">*</span></label>
             <input type="number" class="form-control form-control-sm" id="input-nueva-cant-mapa" name="input-nueva-cant-mapa" min="1" value="1" required>
         </div>
