--- a/materiales/templates/materiales/formularios_altas/alta_proyector.html
+++ b/materiales/templates/materiales/formularios_altas/alta_proyector.html
@@ -10,12 +10,12 @@
         <div class="row mb-3">
             <div class="col-md-3">
                 <label for="cant_ejemplares" style="font-size: 14px;">Cant. de ejemplares</label>
-                <input type="number" class="form-control custom-input" id="cant_ejemplares" name="cant_ejemplares" min="1" value="1">
+                <input type="number" class="form-control form-control-sm" id="cant_ejemplares" name="cant_ejemplares" min="1" value="1">
             </div>
 
             <div class="col-md-3">
                 <label for="sede" style="font-size: 14px;">Sede<span class="text-danger">*</span></label>
-                <select class="form-control custom-input" id="sede" name="sede" required>
+                <select class="form-control form-control-sm" id="sede" name="sede" required>
                 <option value="">Aún sin seleccionar</option>
                 <option value="sede1">La Plata</option>
                 <option value="sede2">Abasto</option>
