--- a/materiales/templates/materiales/formularios_altas/confirmaciones_alta/confirmacion_alta_material.html
+++ b/materiales/templates/materiales/formularios_altas/confirmaciones_alta/confirmacion_alta_material.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% block extra_styles %}
     <style>
+        .modal-dialog.modal-lg {
+            max-width: 1350px;
+        }
+
         body {
             background-color: #f5f5f5;
         }
@@ -277,7 +281,7 @@
             </div>
           </div>
 
-          <!-- Tercera fila: Ejemplar N°, Disponibilidad, Sede, Observaciones -->
+          <!-- Tercera fila: Ejemplar N°, N° de Inventario, Disponibilidad, Sede, Observaciones -->
           <div class="section-title">Información de Ejemplares ({{ form_data.num_ejemplar }} ejemplares)</div>
           {% for ejemplar in ejemplares %}
           <div class="ejemplar-info">
@@ -286,6 +290,11 @@
               <div class="campo-item">
                 <span class="campo-label">Ejemplar N°</span>
                 <span class="campo-value" id="ejemplarNumValue{{ forloop.counter }}">{{ forloop.counter }}</span>
+              </div>
+              <div class="campo-item">
+                <span class="campo-label">N° de Inventario</span>
+                <span class="campo-value" id="inventarioValue{{ forloop.counter }}">{{ ejemplar.inventario_ptr_id|default:"Sin asignar" }}</span>
+                <input type="text" class="form-control campo-input" id="inventarioInput{{ forloop.counter }}" value="{{ ejemplar.inventario_ptr_id|default:'Sin asignar' }}" style="display: none;">
               </div>
               <div class="campo-item">
                 <span class="campo-label">Disponibilidad</span>
