--- a/materiales/templates/materiales/formularios_altas/confirmaciones_alta/confirmacion_alta_proyector.html
+++ b/materiales/templates/materiales/formularios_altas/confirmaciones_alta/confirmacion_alta_proyector.html
@@ -28,6 +28,10 @@
             color: #333;
             font-weight: 600;
             font-size: 1.1rem;
+        }
+
+        .modal-dialog.modal-lg {
+            max-width: 1350px;
             letter-spacing: 1px;
         }
 
